[tool.poetry]
name = "get-oodle-lib"
version = "0.2.0"
description = "Get Oodle library for Unreal Engine"
license = "GPL-3.0-or-later"
authors = ["Youn Mélois <youn@melois.dev>"]
readme = "README.md"
repository = "https://github.com/sehnryr/get-oodle-lib"


[tool.poetry.dependencies]
python = "^3.10"
parse-commit-gitdeps-xml = "^0.1.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"


[tool.poetry.scripts]
get_oodle_lib = "get_oodle_lib.__main__:main"


[tool.poe.tasks]
black = "black --line-length=80 ./get_oodle_lib"
isort = "isort --profile=black --line-length=80 ./get_oodle_lib"
format = ["black", "isort"]
test = "pytest ./tests"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
